# MeteorRoute

./: .gitignore  Anchor.toml  Cargo.toml  DEPLOYMENT_GUIDE.md  README.md  package-lock.json  package.json  tsconfig.json
config/: devnet_config.json  known-program-ids.json  pool_info_template.json  production_config.json  real_pool_config.json
docs/: INTEGRATION_GUIDE.md  METEORROUTE_TODO_PLAN.md  WALKTHROUGH.md  example_transactions.md  quote_only_solution.md
programs/cp-amm/: Cargo.toml
programs/cp-amm/src/: lib.rs
programs/cp-amm/src/instructions/: ix_create_position.rs
programs/meteor-route-fee-router/: Cargo.toml
programs/meteor-route-fee-router/src/: cp_amm.rs  error.rs  events.rs  lib.rs  state.rs  streamflow.rs
programs/meteor-route-fee-router/src/instructions/: distribute_fees.rs  initialize_honorary_position.rs  initialize_policy.rs  initialize_progress.rs  mod.rs  update_policy.rs
scripts/: comprehensive_system_test.js  deploy_and_test.js  fetch_real_pool_data.js  gather_pool_info.js  post_crank_snapshot.js  post_init_verification.js  pre_deployment_checklist.js  preflight_analytical_verification.js  preflight_simulate.sh  preflight_simulation_verification.js
tests/: distribute-fees.e2e.ts  meteor-route-fee-router.ts
