[package]
name = "meteor-route-fee-router"
version = "0.1.0"
description = "DAMM v2 Honorary Quote-Only Fee Position + 24h Distribution Crank"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "meteor_route_fee_router"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros"] }
assert_matches = "1.4.0"
